<resources>
    <string name="app_name">GoodKredit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="nav_item_services">Services</string>
    <string name="nav_item_voucher">Vouchers</string>
    <string name="nav_item_rfid">RFID</string>
    <string name="nav_item_whatsnew">What\'s New</string>
    <string name="nav_item_merchants">Merchants</string>
    <string name="nav_item_deposit">Bank Deposit</string>
    <string name="nav_item_transactions">Transactions</string>
    <string name="nav_item_soa">Statement of Account</string>
    <string name="nav_item_guarantors">Public Sponsors</string>
    <string name="nav_item_support">Support</string>
    <string name="nav_item_refer">Refer a Friend</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="retake_pic">Retake Picture</string>
    <string name="from_gallery">From Gallery</string>
    <string name="string_view_archive">VIEW ARCHIVE</string>
    <string name="string_filter_options">FILTER OPTIONS</string>
    <string name="link">By signing up, you agree to the \n<a href="http://google.com">Terms and Conditions</a></string>
    <string name="menu_icon">Tap on the icon to explore the menu.</string>
    <string name="floating_button">Tap on the <b>FLOATING BUTTON</b> for additional actions.</string>
    <string name="pay_by_qr">Tap on <b>PAY BY QR CODE</b> to pay for your purchase.</string>
    <string name="prepaid_load">Tap on <b>BUY PREPAID LOAD</b> to load.</string>
    <string name="pay_bills">Tap on <b>PAY BILLS</b> for an easy way to pay your bills.</string>
    <string name="merchants">View our merchants by tapping on <b>MERCHANTS</b>.</string>
    <string name="hint1"><i>Enter message here ...</i></string>
    <string name="hint2"><i>Enter subject here ...</i></string>
    <string name="str_usage">Usage</string>
    <string name="str_others">Others</string>
    <string name="string_txn_details">Transaction Details</string>
    <string name="string_payment_details">Payment Details</string>
    <string name="string_send_email">SEND TO EMAIL</string>
    <string name="string_view_voucher_details">View Voucher Details</string>
    <string name="string_hide_voucher_details">Hide Voucher Details</string>
    <string name="string_borrowings_from_sponsor">Borrowings From Sponsor</string>
    <string name="string_approval_code">Approval Code</string>
    <string name="string_merchant">Merchant</string>
    <string name="string_outlet">Outlet</string>
    <string name="string_mobile_number">Mobile Number</string>
    <string name="string_product">Product</string>
    <string name="string_amount">Amount</string>
    <string name="string_stat">Status</string>
    <string name="string_discount">Discount</string>
    <string name="string_net_amount">Net Amount</string>
    <string name="string_biller_reference_number">Biller Ref. #</string>
    <string name="string_biller">Biller</string>
    <string name="string_account_number">Account Number</string>
    <string name="string_account_name">Account Name</string>
    <string name="string_purchases_of_prepaid_vouchers">Purchases of Prepaid Vouchers</string>
    <string name="string_history_of_transferred_vouchers">History of Transferred Vouchers</string>
    <string name="string_history_of_received_vouchers">History of Received Vouchers</string>
    <string name="string_logs_of_prepaid_load">Logs of Prepaid Load</string>
    <string name="string_logs_of_bills_payment">Logs of Bills Payment</string>
    <string name="string_date_time_completed">Date &amp; Time</string>
    <string name="string_load_again">LOAD AGAIN</string>
    <string name="string_retry_load">RETRY</string>
    <string name="string_send_to_email">Send to Email</string>
    <string name="string_transfer_type">Transfer Type</string>
    <string name="string_transfertxn_no">Txn#</string>
    <string name="string_sender">Sender</string>
    <string name="string_receiver">Receiver</string>
    <string name="string_voucher_id">Voucher ID</string>
    <string name="string_time">Time</string>
    <string name="string_no_sponsor_yet"><i>No sponsor yet</i></string>
    <string name="string_account_ref_no">Account /Ref No.</string>
    <string name="string_account_ref_name">Account/Ref Name</string>
    <string name="string_logs_of_smart_retailer_reloading">Logs of Smart Retailer Reloading</string>
    <string name="string_proceed">Proceed</string>
    <string name="generic_error_message">An error has occurred. Please try again.</string>
    <string name="generic_internet_error_message">Seems you are not connected to the internet. Please check your connection and try again. Thank you.</string>
    <string name="string_select_policty_type">Select Policy Type</string>
    <string name="string_policty_type">Policy Type*</string>
    <string name="string_lto_mv_type">LTO MV Type*</string>
    <string name="string_total_premium">TOTAL PREMIUM</string>
    <string name="string_select_your_vehicle">SELECT YOUR VEHICLE</string>
    <string name="string_year_model">Year Model*</string>
    <string name="string_vehicle_maker">Vehicle Maker*</string>
    <string name="string_series">Series*</string>
    <string name="string_color">Color*</string>
    <string name="string_vehicle_details">VEHICLE DETAILS</string>
    <string name="string_mv_file_number">M-V File Number*</string>
    <string name="string_plate_number">Plate Number*</string>
    <string name="string_engine_motor_number">Engine/Motor Number*</string>
    <string name="string_serial_chassis_number">Serial/Chassis*</string>
    <string name="string_personal_information">PERSONAL INFORMATION</string>
    <string name="string_email_address">Email Address*</string>
    <string name="string_email_hint">Please indicate your email address as your CTPL policy will be emailed to you.</string>
    <string name="string_type">Type*</string>
    <string name="string_corporate_name">Corporate Name*</string>
    <string name="string_first_name">First Name*</string>
    <string name="string_middle_name">Middle Name</string>
    <string name="string_last_name">Last Name*</string>
    <string name="string_contact_information">CONTACT INFORMATION</string>
    <string name="string_house_number">House Number*</string>
    <string name="string_street">Street Name*</string>
    <string name="string_building_name">Building Name</string>
    <string name="string_barangay">Barangay</string>
    <string name="string_province">Province*</string>
    <string name="string_municipality_city">Municipality/City*</string>
    <string name="string_zip_code">Zip Code*</string>
    <string name="string_mobile">Mobile Number*</string>
    <string name="string_telephone_number">Telephone Number*</string>
    <string name="string_next">Next</string>
    <string name="string_confirm">Confirm</string>
    <string name="string_done">Done</string>
    <string name="string_paramount_confirm_hint">Kindly review and confirm the details below before you proceed with your application. Once all the details are correct, you may click the Confirm button.</string>
    <string name="string_link">Link</string>
    <string name="csb_note">"Note: <i>Converting points to vouchers is irreversible.</i>"</string>
    <string name="v_request_note">"Note: <i>Please complete your payment within 7 days.</i>"</string>
    <string name="csb_non_member">You are not connected to the\nCity Savings Bank\nReward Point System.\n\n<b>For inquiries, please contact CSB.</b></string>
    <string name="csb_already_requested">We detected that recently you have a pending request to change your mobile number in City Savings Bank. Please wait for confirmation.</string>
    <string name="csb_failed_connect">"Failed to get a response from City Savings Bank. Please try again."</string>
    <string name="votes_request_note">"Note: <i>Please complete your payment within 24 hours.</i>"</string>
    <string name="string_subscribe">SUBSCRIBE</string>
    <string name="string_skycable_ppv_hint">Please review all your information in the form before submitting.</string>
    <string name="string_action_required_warning">ACTION REQUIRED</string>
    <string name="string_firstname_error">Invalid First Name</string>
    <string name="string_lastname_error">Invalid Last Name</string>
    <string name="string_emailadd_error">Invalid Email Address</string>
    <string name="string_deliveryadd_error">Invalid Delivery Address</string>
    <string name="string_mobilenum_error">Invalid Mobile Number</string>
    <string name="string_middlename_error">Invalid Middle Name</string>
    <string name="str_csb_note">This will undergo CSB approval. Once approved, GoodKredit will automatically change your mobile number.</string>
    <string name="str_gk_negosyo_prompt">
        Get discounts! Earn more! Upgrade to GK NEGOSYO now!
    </string>
    <string name="str_gk_negosyo_redirection_note1">GK Negosyo is a Reseller Program within the GoodKredit App. One earns by selling special products and services.</string>
    <string name="str_gk_negosyo_redirection_note2">
        Resellers earn discounts every time they sell products/services that are included in the GK Negosyo program,  income depends on the product/service sold.\n\n
        Take your pick!\nResellers will get vouchers relative to the selected package, with a minimal entry fee. Entry fees and voucher credits differ depending on the number of years. Resellers may opt for a tryout package then later decide which package to continue with.\n\n
        Interested parties may select a Reseller Package and register to GK Negosyo program. An instruction will be sent on how to pay for the chosen program after successful registration. Resellers can pay at any Cebuana Lhuillier branches nationwide.
    </string>
    <string name="strgk_negosyo_request_note">"Note: <i>Please complete your payment within 30 days.</i>"</string>
    <string name="uno_non_member">You are not connected to UNO Reward Point System.\n\n<b>For inquiries, please contact UNO.</b></string>
    <string name="uno_failed_connect">"Failed to get a response from the server. Please try again."</string>
    <string name="referafriendcustom"><i><u> Customize Code </u></i></string>
    <string name="gk_negosyo_enter_referral_code">"It’s your time to EARN!!! Enroll in GK Negosyo and be our GK Reseller! \n\n Enter referral code."</string>
    <string name="school_bullet">\u2022</string>
    <string name="school_paymentchan">Via Payment Channel</string>
    <string name="school_gkvoucher">Via GK Voucher</string>
    <string name="votes_paymentchan">Payment Channel</string>
    <string name="votes_gkvoucher">GK Voucher</string>
    <string name="votes_debitcredit">Credit/Debit Card</string>
    <string name="str_pending">Pending</string>
    <string name="str_completed">Completed</string>
    <string name="str_entermerchantnamecode">Enter Merchant Name / Code</string>
    <string name="str_sitekey">6LeBY3oUAAAAAAARue5uaCN4N84XW0z_WmtOu2qi</string>
    <string name="str_secretkey">6LeBY3oUAAAAAPaHYbpA-uEzR-wd0iUUq30MQbTQ</string>
    <string name="str_fairchild_intro">Welcome to FCCMPC General Assembly 2019!
        You have been identified as a Member-In-Good-Standing thus qualify you to elect a candidate.
        Kindly scroll down for the instructions. and
        Please be guided accordingly.</string>
</resources>