<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/home_body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="3dp"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbarFadeDuration="4"
        android:scrollbarSize="5dp"
        android:scrollbars="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <include layout="@layout/shift_focus" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:orientation="vertical"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="Payment Options"
                    android:textAppearance="@style/roboto.bold"
                    android:textColor="@color/color_045C84"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rg_payment_options"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <RadioButton
                        android:id="@+id/rb_channel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:drawableStart="@drawable/ic_votes_payment_channel"
                        android:drawablePadding="15dp"
                        android:padding="5dp"
                        android:text="@string/votes_paymentchan"
                        android:textAppearance="@style/roboto.regular"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLineDivider" />

                    <RadioButton
                        android:id="@+id/rb_voucher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="15dp"
                        android:drawableStart="@drawable/ic_votes_voucher"
                        android:drawablePadding="15dp"
                        android:padding="5dp"
                        android:text="@string/votes_gkvoucher"
                        android:textAppearance="@style/roboto.regular"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="16dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorLineDivider" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableStart="@drawable/ic_votes_card"
                        android:drawablePadding="15dp"
                        android:padding="5dp"
                        android:text="@string/votes_debitcredit"
                        android:textAppearance="@style/roboto.regular"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="16dp"
                        android:visibility="visible" />

                </RadioGroup>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_amount_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="15dp"
                android:paddingLeft="15dp"
                android:paddingEnd="15dp"
                android:paddingRight="15dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:text="Enter Amount to Pay"
                    android:textAppearance="@style/roboto.regular"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="16dp" />

                <EditText
                    android:id="@+id/edt_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:digits="1234567890"
                    android:hint=""
                    android:inputType="numberDecimal"
                    android:padding="15dp"
                    android:textColor="@color/colorTextGrey"
                    android:textSize="16dp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/btn_continue"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginBottom="25dp"
                    android:background="@drawable/votes_action_button"
                    android:gravity="center"
                    android:padding="15dp"
                    android:text="CONTINUE"
                    android:textAllCaps="true"
                    android:textAppearance="@style/roboto.bold"
                    android:textColor="@color/whitePrimary" />


            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <include layout="@layout/payment_channel" />

</RelativeLayout>