<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="10dp">

    <LinearLayout
        android:id="@+id/historyLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shadow_box"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorwhite"
            android:orientation="horizontal"
            android:paddingBottom="5dp"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingTop="5dp">

            <TextView
                android:id="@+id/txvDate"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="start"
                android:text="JULY 25, 2017"
                android:textColor="@color/color_676767"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txnStatus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="end"
                android:text="SUCCESS"
                android:textColor="@color/color_676767"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_FAFAFA"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="@string/string_time"
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/txvTime"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="@string/string_approval_code"
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/transactionNo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="Amount Paid"
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/amountPaid"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="Registration ID"
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/registrationID"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="Registration Type"
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/registrationType"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="Auth. No."
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/txvAuthNo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="COC No."
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/txvCocNo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/corporateNameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="Corporate Name"
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/corporateName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/nameLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/usage_details_divider_item"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingEnd="15dp"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="sans-serif"
                    android:gravity="start|center_vertical"
                    android:text="Name"
                    android:textAllCaps="true"
                    android:textColor="@color/color_B8B7B8" />

                <TextView
                    android:id="@+id/name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif"
                    android:gravity="end|center_vertical"
                    android:maxLines="1"
                    android:textColor="@color/color_676767" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSendEmailLayout"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/send_to_email"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_4A90E2"
                android:text="@string/string_send_to_email"
                android:textAllCaps="true"
                android:textColor="@color/colorwhite"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>